# RNA-seq

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  CONFIG  CONFIG_Human  CONFIG_Mouse  INSTALL.md  NEWS  README.md  README_HPC.md  SAMPLE_PLAN  environment.yml  functions.nf  install_tools_via_conda.sh  lance  lance_data_rnaseq-diag  main.nf  nextflow.config  parameters.settings.json  run_install.sh
.gitlab/issue_templates/: bug_report.md  new_feature.md
assets/: devMessage.txt  email_template.html  heatmapHeader.txt  heatmap_header.txt  metadata.tsv  multiqcConfig.yaml  multiqc_config.yaml  nfHeader.txt  pca_header.txt
conf/: base.config  cluster.config  conda.config  containers.config  curie.config  docker.config  geniac.config  genomes.config  genomes.config.example  igenomes.config  igenomes.config.example  local.config  modules.config  multiconda.config  multipath.config  path.config  process.config  singularity.config  test.config  tools-path.config  tools-path.config.example  tools.config  users_bioinfo.config
conf/templates/: CMakeLists.txt  cluster.config.in  containers.config.in  genomes.config.in  igenomes.config.in  tools-path.config.in
configs/: base.config  curie.config  genomes.config  igenomes.config  rna.config  singularity.config  test.config  tools.config
doc/: QUICKSTART.md
docs/: README.md  geniac.md  installation.md  output.md  profiles.md  referenceGenomes.md  reference_genomes.md  troubleshooting.md  usage.md
docs/configuration/: adding_your_own.md  local.md  reference_genomes.md
install/: cmake-init.cmake
lib/: NFTools.groovy  ParamsLinter.groovy  ParamsReader.groovy  functions.nf  utils.nf
lib/colorlog/: Colors.groovy  MonoChrome.groovy  PolyChrome.groovy  Presets.groovy
nf-modules/common/process/: deepToolsBamCoverage.nf  fastqc.nf  featureCounts.nf  markDuplicates.nf  preseq.nf  qualimap.nf  samtoolsFlagstat.nf  samtoolsIndex.nf  samtoolsSort.nf  starAlign.nf
nf-modules/common/process/bowtie2/: bowtie2.nf
nf-modules/common/process/deeptools/: deeptoolsBamCoverage.nf
nf-modules/common/process/dupradar/: dupradar.nf
nf-modules/common/process/fastqc/: fastqc.nf
nf-modules/common/subworkflow/: identito.nf
nf-modules/local/process/: #rseqc.nf#  #salmonQuantFromBam.nf#  HTseqCounts.nf  bigWig.nf  combineIndentito.nf  combinePolym.nf  dupradar.nf  exploratoryAnalysis.nf  fastqc.nf  featureCounts.nf  geneSaturation.nf  getCountsPerGeneType.nf  getPolym.nf  getSoftwareVersions.nf  getSoftwareVersions.nf.save  gffcompare.nf  hisat2Align.nf  hisat2Sort.nf  htseqCounts.nf  identito.nf  identitoCombine.nf  identitoPolym.nf  makeHisatSplicesites.nf  markDuplicates.nf  mergeCounts.nf  multiqc.nf  outputDocumentation.nf  prepRseqc.nf  preseq.nf  qualimap.nf  rRNAMapping.nf  rseqc.nf  rseqcPrep.nf  salmonQuantFromBam.nf  salmonQuantFromFastq.nf  salmonQuantFromReads.nf  salmonTx2gene.nf  salmonTxImport.nf  samtoolsFlagstat.nf  samtoolsIndex.nf  (+9 more)
nf-modules/local/subworkflow/: counts.nf  featureCounts.nf  functions.nf  geneCountsAnalysis.nf  htseqCounts.nf  ident.nf  identito.nf  mapping.nf  mappingHisat2.nf  mappingStar.nf  markdup.nf  polym.nf  polymIdent.nf  qc.nf  rseq.nf  salmonQuant.nf  salmonQuantFromBam.nf  salmonQuantFromFastq.nf  scallop.nf  starCounts.nf  strandness.nf  stringtie.nf
recipes/conda/: README.md  bcftools.yml  bowtie.yml  bowtie2.yml  deeptools.yml  dupradar.yml  fastqc.yml  featurecounts.yml  gffcompare.yml  hisat2.yml  htseq.yml  identito.yml  multiqc.yml  picard.yml  preseq.yml  python.yml  qualimap.yml  r.yml  rseqc.yml  salmon.yml  samtools.yml  scallop.yml  star.yml  stringtie.yml  trimgalore.yml  unix.yml  xengsort.yml
recipes/dependencies/: README.md
recipes/docker/: README.md  bowtie.Dockerfile  bowtie2.Dockerfile  deeptools.Dockerfile  dupradar.Dockerfile  fastqc.Dockerfile  fastqc.yml  featurecounts.Dockerfile  hisat2.Dockerfile  htseq.Dockerfile  identito.Dockerfile  multiqc.Dockerfile  onlyLinux.Dockerfile  picard.Dockerfile  preseq.Dockerfile  python.Dockerfile  qualimap.Dockerfile  qualimap.yml  r.Dockerfile  rseqc.Dockerfile  rseqc.yml  samtools.Dockerfile  star.Dockerfile  unix.Dockerfile  unix.yml
recipes/singularity/: README.md  bowtie.def  bowtie.yml  bowtie2.def  bowtie2.yml  deeptools.def  dupradar.def  fastqc.def  featurecounts.def  hisat2.def  hisat2.yml  htseq.def  identito.def  multiqc.def  onlyLinux.def  picard.def  preseq.def  python.def  qualimap.def  r.def  rseqc.def  samtools.def  star.def  unix.def
scripts/: fullStats.py  getStatFile.sh  lib_expan_rnaseq.R  lib_rnaseq.R  makeCountTable.R  makeExportFiles.sh  makeOutputList.sh  report.Rmd  rna.inc.sh  run_qsub.sh  run_qsub.sh~  statFile.py  utils.inc.sh
standalone/: CHANGELOG  NEWS
standalone/scripts/: fullStats.py  getStatFile.sh  lib_rnaseq.R  makeCountTable.R  report.Rmd  rna.inc.sh
standalone/test-op/: CONFIG_Human  CONFIG_Mouse  SAMPLE_PLAN_B249  SAMPLE_PLAN_Gendrel  run-op.sh
test-op/: CONFIG_G448  CONFIG_Human  CONFIG_Mouse  CONFIG_Mouse.mm9  CONFIG_Zebrafish.danRer11  RNApip_cluster.o874270-1  RNApip_cluster.o874270-2  RNApip_cluster.o874270-3  RNApip_cluster.o874270-4  RNApip_cluster.o874270-5  RNApip_cluster.o874270-6  RNApip_cluster.o874286-1  RNApip_cluster.o874286-2  RNApip_cluster.o874300-3  RNApip_report.o874301  SAMPLE_PLAN_B249  SAMPLE_PLAN_D095  SAMPLE_PLAN_G448  SAMPLE_PLAN_L81  multiqc_report.html  run-op.sh  sampleplan.csv
test-op/config-files/: CONFIG_Arabidopsis_thaliana.TAIR10  CONFIG_Drosophila_melanogaster.dmel_r6.21_FB2018_02  CONFIG_Drosophila_melanogaster.r6-21  CONFIG_Human.hg19  CONFIG_Human.hg38  CONFIG_Mouse.mm10  CONFIG_Mouse.mm9  CONFIG_Mycobacterium_tuberculosis.Erdman  CONFIG_Zebrafish.danRer10  CONFIG_Zebrafish.danRer11
test-op/data/: metadata.tsv
utils/: deploy_git_pipeline.sh
utils/conda/: install_tools_via_conda.sh  install_tools_via_conda.sh.old
utils/docker/: README.md
utils/docker/multiqc-1.6/: Dockerfile
utils/singularity/: README.md  build_containers.sh
utils/singularity/recipes/: multiqc-1.6.def  rnaseq-2.0.def  rseqc-2.6.4.def
(+25 files in other folders)
